# bookmarks_collection_rs

./: .gitignore  Cargo.toml  bookmarks.json
src/: lib.rs  main.rs
