[package]
name = "bookmarks_collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert-json-diff = "2.0.2"
chrono = { version = "0.4.24", features = ["serde"] }
itertools = "0.10.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_path_to_error = "0.1.11"

[dev-dependencies]
assert-json-diff = "2.0.2"
